--- a/libtoxtmi.csproj
+++ b/libtoxtmi.csproj
@@ -16,8 +16,10 @@
     <RepositoryType>Git</RepositoryType>
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>libtoxtmi.pfx</AssemblyOriginatorKeyFile>
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
     <Platforms>AnyCPU;x64</Platforms>
+    <AssemblyVersion>0.1.1.0</AssemblyVersion>
+    <FileVersion>0.1.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
